# corepluslib

./: .black  .editorconfig  .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  setup.cfg
coreplus/: __init__.py  configs.py  urls.py  version.py
coreplus/api/: README.md  apps.py  helpers.py  schemas.py  urls.py  views.py
coreplus/contacts/: abstracts.py  admin.py  apps.py  gis.py  inlines.py  models.py
coreplus/docs/: __init__.py  apps.py  urls.py  views.py
coreplus/hooks/: README.md  admin.py  apps.py  core.py  urls.py
coreplus/markdown/: README.md  __init__.py  apps.py  bleaching.py  renderer.py  tests.py
coreplus/navigators/: README.md  admin.py  apps.py  models.py
coreplus/numerators/: README.md  admin.py  apps.py  models.py
coreplus/profanity/: README.md  apps.py  extras.py  tests.py  validators.py  wordlist.txt
coreplus/qrcodes/: README.md  apps.py  models.py
coreplus/settings/: README.md  admin.py  apps.py  contexts.py  models.py  permissions.py  registries.py  urls.py  views.py
coreplus/spams/: README.md  apps.py  extras.py  spams.py  tests.py  validators.py
coreplus/utils/: avatars.py  contenttypes.py  currencies.py  decorators.py  loading.py  slugs.py  validators.py
docs/source/: conf.py  index.rst
example/: settings.py  urls.py
example/app/: apps.py  corehooks.py  models.py
oldmodules/admin/: README.md  apps.py  base.py  filters.py  mixins.py  sites.py
oldmodules/discuss/: README.md  admin.py  apps.py  models.py
oldmodules/heralds/: README.md  admin.py  apps.py  managers.py  models.py  tests.py
oldmodules/media/: README.md  apps.py  helpers.py  models.py  tests.py
oldmodules/notices/: README.md  admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
oldmodules/reactions/: README.md  admin.py  apps.py  models.py
oldmodules/search/: README.md  apps.py  urls.py  views.py
oldmodules/shorts/: README.md  admin.py  apps.py  managers.py  models.py  urls.py  utils.py  views.py
oldmodules/tags/: README.md  admin.py  apps.py  managers.py  models.py  resources.py
scripts/: clear_migrations.py
themes/: README.md  package.json  webpack.config.js
themes/source/: main.js
(+116 files in other folders)
