[metadata]
name = corepluslib
version = attr: coreplus.__version__
url = https://gitlab.com/zeroplus/django/django-coreplus
author = Zero Plus
author_email = sasri.works@gmail.com
description = Django functional modules
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Documentation = https://gitlab.com/zeroplus/django/django-coreplus/-/wikis/
    Source = https://gitlab.com/zeroplus/django/django-coreplus

[options]
python_requires = >=3.8
packages = coreplus
include_package_data = true
zip_safe = false
install_requires =
    django>=4.2,<=4.3
    django-taggit
    django-import-export
    django-widget-tweaks
    django-wkhtmltopdf
    django-phonenumber-field
    django-polymorphic
    django-filter
    drf-spectacular
    drf-spectacular-sidecar
    langdetect
    easy-thumbnails
    babel
    bleach
    boto3
    mistune<=2.0.4
    scikit-learn
    phonenumbers
    pillow
    pycountry
    qrcode
    geopy

[options.entry_points]

[options.extras_require]

[bdist_rpm]

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601,W503
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = coreplus
include_trailing_comma = true
known_django = django
line_length = 119
multi_line_output = 5
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
